--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <tr>
 <th>Tên</th>
 <th>Số tiền</th>
+<th>Đã trả</th>
 <th>QR</th>
 </tr>
 </thead>
@@ -34,3 +35,4 @@
 <script src="app.js"></script>
 </body>
 </html>
+
